# MaudeViewWatchlistManagerAgent

./: .env.example  .gitignore  .mcp.json  README.md  go.mod  justfile  main.go
a2a/: agent-card.json  pyproject.toml
a2a/src/maudeview_agent/: __init__.py  config.py  main.py  options.py  prompts.py
a2a/src/maudeview_agent/a2a/: __init__.py  handler.py  models.py  server.py
a2a/src/maudeview_agent/lmstudio/: __init__.py  agent.py  llm_client.py  mcp_subprocess.py
